--- a/templates/afterInputMovie.ejs
+++ b/templates/afterInputMovie.ejs
@@ -5,15 +5,16 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Movie Successfully Inputted</title>
+	<title>Movie Successfully Submit</title>
 </head>
 
 <body>
-	<h1>Movie Inputed!!!</h1>
-        The movie you inputed is : <%- name %>
-        Would you like to add <a href="/movieInput">another movie</a> or get your <a href="/getResult">recomendation now</a>
+	<h1>Movie Successfully Submit!!</h1>
+		The movie you input was : <%- name %>
+        Would you like to add <a href="/movieInput">another movie</a> or get your <a href="/getResult"> movie information now</a>
         
 	<hr>
+	<a href="/">HOME</a>
 </body>
 
 </html>
