--- a/templates/afterInputTVShow.ejs
+++ b/templates/afterInputTVShow.ejs
@@ -3,16 +3,17 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>TV Show Successfully Inputted</title>
+	<title>TV Show Successfully Submit</title>
 	<link rel="stylesheet" href="/style.css">
 
 </head>
 
 <body>
-	<h1>Tv Show Inputed!!!</h1>
-        The tv show you inputed is : <%- name %>
-        Would you like to add <a href="/tvshowInput">another tv show</a> or get your <a href="/getResult">recomendation now</a>
+	<h1>Tv Show Successfully Input!!</h1>
+        The tv show you input was : <%- name %>
+        Would you like to add <a href="/tvshowInput">another tv show</a> or get your <a href="/getTV"> TV show information now</a>
 	<hr>
+	<a href="/">HOME</a>
 </body>
 
 </html>
