--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-	<h1>Information Center</h1>
+	<h1>THE MOVIE AND TV SHOW GURU</h1>
     <h4>We will give you information about your favorite movies and TV shows! </h4>
-    <a href="/movieInput">I want movie recomendations</a><br>
-    <a href="/tvshowInput">I want TV shows recomendations</a>
+    <a href="/movieInput">I want information about my favorite movie</a><br>
+    <a href="/tvshowInput">I want information about my favorite TV show</a>
 
 	<h2>Need something new to watch? </h2> 
-	<a href="/movieInput">Movie Recommendations</a> <br><br>
+	<a href="/getTrending">Movie Recommendations</a> <br><br>
 	<hr>
 
-	Clear Movie Database <a href="/remove">Remove All Applications</a><br>
+	Clear Movie Database <a href="/remove">Remove All Media</a><br>
 
 
 </body>
