--- a/templates/removalConfirm.ejs
+++ b/templates/removalConfirm.ejs
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Removed</title>
+	<link rel="stylesheet" href="/style.css">
 </head>
 
 	<body>
-		<h1>Removal of All Applications</h1>
+		<h1>We've removed all your TV shows and Movies!</h1>
 
 		<div>
-        	<p>All applications have been removed from the database. Number of applications removed: <%- num %> </p>
+        	<p>All TV shows and Movies have been removed from the database. </p>
 			<a href="/">HOME</a>
 		</div>
 
