--- a/templates/tvInput.ejs
+++ b/templates/tvInput.ejs
@@ -10,19 +10,17 @@
 
 <body>
 	<h1>TV Shows</h1>
-    <p>Directions: Fill in the name of the TV show. <br>
-        Genre is not required but it helps make a better recomendation, then click submit</p>
+    <p>Directions: Fill in the name of the TV show, then click submit</p>
     <form action="/tvshowInput" method="post">
         <fieldset>
             <b>Name: </b><input type="text" name="name" id="name" required>
-            <br>
-            <b>Genre: </b><input type="text" name="genre" id="genre">
         </fieldset>
         <br>
         <input type="reset" value="Reset">
         <input type="submit" value="Submit">
     </form>
 	<hr>
+    <a href="/">HOME</a>
 </body>
 
 </html>
