--- a/templates/getResult.ejs
+++ b/templates/getResult.ejs
@@ -6,22 +6,14 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Here's your result!!!</h1><br>
+    <h1>Here's the information about your favorite Movie!!</h1><br>
     <% movies.forEach(movieArray => { %>
         <% movieArray.forEach(movie => { %>
             <div>
                 <h2><%= movie.title %></h2>
                 <p>Original Title: <%= movie.original_title %></p>
-                <p>Genres: <%= movie.genre_ids.join(', ') %></p> 
-                <p>Tagline: <%= movie.tagline %></p>
-                <p>Runtime: <%= movie.runtime %> minutes</p>
-                <p>Language: <%= movie.original_language %></p>
-                <p>Budget: $<%= movie.budget %></p>
-                <p>Revenue: $<%= movie.revenue %></p>
                 <p>Release Date: <%= movie.release_date %></p>
                 <p>Rating: <%= movie.vote_average %> (Votes: <%= movie.vote_count %>)</p>
-                <p>Popularity Score: <%= movie.popularity %></p>
-                <p>IMDb ID: <%= movie.imdb_id %></p>
                 <p>Plot Summary: <%= movie.overview %></p>
                 <% if (movie.poster_path) { %>
                     <img src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" alt="<%= movie.title %> Poster">
@@ -31,6 +23,7 @@
             </div>
         <% }); %>
     <% }); %>
+    <a href="/">HOME</a>
 </body>
 </html>
 
