--- a/templates/remove.ejs
+++ b/templates/remove.ejs
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-	<h1>Remove All Applicants</h1>
+	<h1>Remove All TV shows and Movies</h1>
 	<form action="<%- port %>" method="post">
-        <input type="submit" value="Remove all applicants" name="submit"/>
+        <input type="submit" value="Remove all TV shows and Movies" name="submit"/>
 	</form>
     
 
@@ -20,7 +20,7 @@
 
     <script>
 
-        window.onsubmit = () => confirm("Are you sure you want to remove all applicants?");
+        window.onsubmit = () => confirm("Are you sure you want to remove all TV shows and Movies?");
 
     </script>
 </body>
