--- a/templates/afterInputMovie.ejs
+++ b/templates/afterInputMovie.ejs
@@ -10,7 +10,7 @@
 
 <body>
 	<h1>Movie Successfully Submit!!</h1>
-		The movie you input was : <%- name %>
+		The movie you input was : <%- name %> <br>
         Would you like to add <a href="/movieInput">another movie</a> or get your <a href="/getResult"> movie information now</a>
         
 	<hr>
