--- a/templates/afterInputTVShow.ejs
+++ b/templates/afterInputTVShow.ejs
@@ -10,7 +10,7 @@
 
 <body>
 	<h1>Tv Show Successfully Input!!</h1>
-        The tv show you input was : <%- name %>
+        The tv show you input was : <%- name %> <br>
         Would you like to add <a href="/tvshowInput">another tv show</a> or get your <a href="/getTV"> TV show information now</a>
 	<hr>
 	<a href="/">HOME</a>
